Update tutorial vignette (#7)
* refresh the "tutorial" vignette: new narrative, new graphics
* examples of searching in tutorial
* add public API explain
* make wizard handle repository objects
* new TODOs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,10 +25,12 @@ Suggests:
 Collate:
   'addins.R'
   'chronicler.R'
+  'dialog.R'
   'simulation-ext.R'
   'terms.R'
   'tracker.R'
   'ui.R'
+  'vignettes.R'
 Remotes:
   github::lbartnik/browser,
   github::lbartnik/defer,
