--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(find_experiments)
 export(history)
 export(identify_artifact)
 export(iris_model)
+export(is_artifact_id)
+export(knit_artifact)
 export(london_meters)
 import(browser)
 import(repository)
