--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,3 +26,4 @@ importFrom(rlang,inform)
 importFrom(rlang,is_character)
 importFrom(rlang,is_scalar_character)
 importFrom(rlang,warn)
+importFrom(utils,capture.output)
