--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,10 @@ repository/
 # RStudio files
 .Rproj.user/
 
-# produced vignettes
+# produced vignettes & temp directories
 vignettes/*.html
 vignettes/*.pdf
+vignettes/graphics/stack/
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
