Update readme and vignettes (#13)
* update README.md
* update docker scripts, use Ubuntu 18.10
* update the docker vignette
* finish the mlflow vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,10 +20,12 @@ Imports:
   storage,
   utilities
 Suggests:
+  carrier,
   knitr,
   prettycode,
   rstudioapi,
-  testthat
+  testthat,
+  withr
 Collate:
   'addins.R'
   'chronicler.R'
